[package]
name = "generator"
version = "0.1.0"
edition = "2024"
description = "Geometry images generator"
repository = "https://github.com/Nagatani/geometry-image-generator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
delaunator = "1.0.2"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]